fix: Improve contrast for strong tags in darkmoss palette

--- a/static/css/palettes/darkmoss.css
+++ b/static/css/palettes/darkmoss.css
@@ -17,6 +17,9 @@
   --base0B: #499180;
   --base0C: #66d9ef;
   --base0D: #498091;
-  --base0E: #9bc0c8;
+  --base0E: #d27b53;
   --base0F: #d27b53;
 }
+
+/* original */
+/* :root { --base0E: #9bc0c8; } */
